hack/deploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-apiserver
  namespace: kube-ac
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  selector:
    apiserver: "true"
